# ua-military-calendar

./: CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: validate-ics.yml
calendars/: ua-military-full.ics  ua-military-memory.ics  ua-military-official.ics
scripts/: lint_ics.py
