[tool.poetry]
name = "ua-military-calendar"
version = "0.1.0"
description = "Public ICS calendars of Ukrainian military, professional and remembrance days."
authors = ["UA Military & Defenders Calendar contributors"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
icalendar = "^6.3.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
